# VpnaaS-Netbox

./: Dockerfile  Dockerfile.custom  README.md  docker-compose.override.yml  docker-compose.test.override.yml  docker-compose.test.yml  docker-compose.yml  requirements-container.txt
.github/workflows/: main.yml
configuration/: plugins.py
docker/: nginx-unit.json  unit.list
env/: netbox.env  postgres.env
netbox-vpnaas-plugin/: LICENSE  MANIFEST.in  Readme.md  pyproject.toml
netbox-vpnaas-plugin/netbox_configuration/: configuration_dev.py  configuration_testing.py
netbox-vpnaas-plugin/netbox_vpnaas/: __init__.py  admin.py  config.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox-vpnaas-plugin/netbox_vpnaas/api/: __init__.py  serializers.py  urls.py  views.py
netbox-vpnaas-plugin/netbox_vpnaas/migrations/: 0001_initial.py
netbox-vpnaas-plugin/netbox_vpnaas/templates/netbox_vpnaas/: base.html  ipv4routes.html  remoteaccesstunnel.html
test-configuration/: test_config.py
